force-app/main/default/objects/Case/fields/X10x_PartyKey__c.field-meta.xml
<CustomField>
    <fullName>X10x_PartyKey__c</fullName>
    <externalId>true</externalId>
    <label>10x PartyKey</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>