force-app/main/default/objects/Case/listViews/Org_Case_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Case_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>CASES.CURRENCY_ISO_CODE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Case_Hierarchy</label>
</ListView>