force-app/main/default/objects/Case/listViews/Queue_Test_Case.listView-meta.xml
<ListView>
    <fullName>Queue_Test_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue Test</label>
    <queue>Queue_Test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>